--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-    "name": "RumblingCompany",
-    "version_number": "0.0.2",
-    "website_url": "https://github.com/AllunDev/RumblingCompany",
-    "description": "Connect your vibrating devices to improve the games tactile feedback",
-    "dependencies": [
-      "BepInEx-BepInExPack-5.4.2100"
-    ]
-  }
+  "name": "RumblingCompany",
+  "version_number": "0.0.3",
+  "website_url": "https://github.com/AllunDev/RumblingCompany",
+  "description": "Controlling your vibrating devices since 2024",
+  "dependencies": [
+    "BepInEx-BepInExPack-5.4.2100"
+  ]
+}
